--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -42,7 +42,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="/">GOB</a>
+                    <a class="brand" href="/"><i class="icon-comment icon-white"></i> GOB</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="/">Home</a></li>
