add pack file view

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -50,7 +50,8 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">References <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="http://git-scm.com/book/en/Git-Internals-Git-Objects">Git Internals - Git Objects</a></li>
-                                    <li><a href="http://code.google.com/p/git-core/source/browse/Documentation/technical/index-format.txt">git-core index-format.txt</a></li>
+                                    <li><a href="http://github.com/git/git/blob/master//Documentation/technical/index-format.txt">index-format.txt</a></li>
+                                    <li><a href="https://github.com/git/git/blob/master/Documentation/technical/pack-format.txt">pack-format.txt</a></li>
                                     <li><a href="http://git-scm.com/docs/git-check-ref-format">git-check-ref-format(1) Manual Page</a></li>
                                     <li><a href="http://git-scm.com/docs/gitrevisions.html">gitrevisions(7) Manual Page</a></li>
 
@@ -71,6 +72,7 @@
       <li class="nav-header">Git Object Browser</li>
       <li class=""><a href="/#/.git/"><i data-entry-icon="'directory'"></i>.git</a></li>
       <li class=""><a href="/#/.git/objects"><i data-entry-icon="'directory'"></i> objects</a></li>
+      <li class=""><a href="/#/.git/objects/pack"><i data-entry-icon="'directory'"></i> pack</a></li>
       <li class=""><a href="/#/.git/refs"><i data-entry-icon="'directory'"></i> refs</a></li>
       <li class=""><a href="/#/.git/HEAD"><i data-entry-icon="'ref'"></i> HEAD</a></li>
       <li class=""><a href="/#/.git/index"><i data-entry-icon="'index'"></i> index</a></li>
