--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -47,16 +47,28 @@
                         <ul class="nav">
                             <li class="active"><a href="/">Home</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">References <b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="http://git-scm.com/book/en/Git-Internals-Git-Objects">Git Internals - Git Objects</a></li>
                                     <li><a href="http://github.com/git/git/blob/master//Documentation/technical/index-format.txt">index-format.txt</a></li>
                                     <li><a href="https://github.com/git/git/blob/master/Documentation/technical/pack-format.txt">pack-format.txt</a></li>
                                     <li><a href="http://git-scm.com/docs/git-check-ref-format">git-check-ref-format(1) Manual Page</a></li>
                                     <li><a href="http://git-scm.com/docs/gitrevisions.html">gitrevisions(7) Manual Page</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sources <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="https://github.com/git/git">Git</a></li>
+                                    <li><a href="https://github.com/libgit2/libgit2">libgit2</a></li>
+                                    <li><a href="https://github.com/mojombo/grit">Grit (Ruby)</a></li>
+                                    <li><a href="https://github.com/jelmer/dulwich">Dulwich (Python)</a></li>
+                                    <li><a href="https://github.com/bobtfish/git-pureperl">Git::PurePerl (Perl)</a></li>
+                                    <li><a href="https://github.com/christkv/node-git">node-git (node.js)</a></li>
 
                                     <li class="divider"></li>
-                                    <li><a href="http://git-scm.com">Git</a></li>
+                                    <li><a href="https://github.com/koseki/git-object-browser">git-object-browser</a></li>
+
                                 </ul>
                             </li>
                         </ul>
