support multiple JSON directories

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,12 +82,12 @@
   <div class="span3">
     <ul class="nav nav-list">
       <li class="nav-header">Git Object Browser</li>
-      <li class=""><a href="#/.git/"><i data-entry-icon="'directory'"></i>.git</a></li>
-      <li class=""><a href="#/.git/objects"><i data-entry-icon="'directory'"></i> objects</a></li>
-      <li class=""><a href="#/.git/objects/pack"><i data-entry-icon="'directory'"></i> pack</a></li>
-      <li class=""><a href="#/.git/refs"><i data-entry-icon="'directory'"></i> refs</a></li>
-      <li class=""><a href="#/.git/HEAD"><i data-entry-icon="'ref'"></i> HEAD</a></li>
-      <li class=""><a href="#/.git/index"><i data-entry-icon="'index'"></i> index</a></li>
+      <li class=""><a href="#{{basedir}}/.git/"><i data-entry-icon="'directory'"></i>.git</a></li>
+      <li class=""><a href="#{{basedir}}/.git/objects"><i data-entry-icon="'directory'"></i> objects</a></li>
+      <li class=""><a href="#{{basedir}}/.git/objects/pack"><i data-entry-icon="'directory'"></i> pack</a></li>
+      <li class=""><a href="#{{basedir}}/.git/refs"><i data-entry-icon="'directory'"></i> refs</a></li>
+      <li class=""><a href="#{{basedir}}/.git/HEAD"><i data-entry-icon="'ref'"></i> HEAD</a></li>
+      <li class=""><a href="#{{basedir}}/.git/index"><i data-entry-icon="'index'"></i> index</a></li>
     </ul>
   </div>
 
