--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,21 +10,21 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="common/css/bootstrap.min.css">
         <style>
             body {
                 padding-top: 60px;
                 padding-bottom: 40px;
             }
         </style>
-        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/angular-ui.min.css">
-        <link rel="stylesheet" href="css/font-awesome.css">
+        <link rel="stylesheet" href="common/css/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="common/css/main.css">
+        <link rel="stylesheet" href="common/css/angular-ui.min.css">
+        <link rel="stylesheet" href="common/css/font-awesome.css">
 
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
+            <script>window.html5 || document.write('<script src="common/js/vendor/html5shiv.js"><\/script>')</script>
         <![endif]-->
     </head>
     <body data-ng-app="GitObjectBrowser">
@@ -103,12 +103,12 @@
         </div> <!-- /container -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/vendor/angular.js"></script>
-        <script src="js/vendor/angular-resource.min.js"></script>
-        <script src="js/vendor/angular-ui.min.js"></script>
+        <script>window.jQuery || document.write('<script src="common/js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+        <script src="common/js/vendor/bootstrap.min.js"></script>
+        <script src="common/js/vendor/angular.js"></script>
+        <script src="common/js/vendor/angular-resource.min.js"></script>
+        <script src="common/js/vendor/angular-ui.min.js"></script>
 
-        <script src="js/main.js"></script>
+        <script src="common/js/main.js"></script>
     </body>
 </html>
