load steps data

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -109,6 +109,7 @@
         <script src="common/js/vendor/angular-resource.min.js"></script>
         <script src="common/js/vendor/angular-ui.min.js"></script>
 
+        <script src="steps.js"></script>
         <script src="common/js/main.js"></script>
     </body>
 </html>
