--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,9 +43,19 @@
                         <span class="icon-bar"></span>
                     </a>
                     <a class="brand" href="/"><i class="icon-comment icon-white"></i> GOB</a>
-                    <div class="nav-collapse collapse">
+                    <div class="nav-collapse collapse" data-ng-controller="MenuCtrl">
                         <ul class="nav">
                             <li class="active"><a href="/">Home</a></li>
+
+                            <li class="dropdown" data-ng-show="steps.length > 0" style="display:none">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Steps <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li data-ng-repeat="step in steps"><a data-ng-href="#/{{step.name}}/.git/" data-ng-click="">{{step.label}}</a></li>
+                                </ul>
+                            </li>
+                            <li data-ng-show="steps.length > 0" style="display:none"><a data-ng-click="stepPrev()" href=""><i class="icon-chevron-left"></i>Prev</a></li>
+                            <li data-ng-show="steps.length > 0" style="display:none"><a data-ng-click="stepNext()" href="">Next<i class="icon-chevron-right"></i></a></li>
+
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
