--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -139,6 +139,7 @@
         <script src="common/js/vendor/angular-resource.min.js"></script>
         <script src="common/js/vendor/angular-ui.min.js"></script>
 
+        <script src="default.js"></script>
         <script src="config.js"></script>
         <script src="common/js/main.js"></script>
     </body>
