--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -59,10 +59,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="/"><i class="icon-comment icon-white"></i> GOB</a>
+                    <a class="brand" href="#/"><i class="icon-comment icon-white"></i> GOB</a>
                     <div class="nav-collapse collapse" data-ng-controller="MenuCtrl">
                         <ul class="nav">
-                            <li class="active" data-ng-show="steps.length == 0" style="display:none"><a href="/">Home</a></li>
+                            <li class="active" data-ng-show="steps.length == 0" style="display:none"><a href="#/">Home</a></li>
 
                             <li class="dropdown" data-ng-show="steps.length > 0" style="display:none">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Steps <b class="caret"></b></a>
