--- a/ja/notes/step11.html
+++ b/ja/notes/step11.html
@@ -2,6 +2,6 @@
 <p><code>$ touch d.txt</code></p>
 <p><code>$ git add d.txt</code></p>
 <p><code>$ git commit -m '...'</code></p>
-<p>マージの準備として、<a href="#/step11/.git/refs/heads/master">master ブランチ</a>に空の <a href="#/step11/.git/objects/e6/9de29bb2d1d6434b8b29ae775ad8c2e48c5391">d.txt</a> を追加してコミットしました。</p>
+<p>merge コマンドを実行する準備をします。<a href="#/step11/.git/refs/heads/master">master ブランチ</a>に空の <a href="#/step11/.git/objects/e6/9de29bb2d1d6434b8b29ae775ad8c2e48c5391">d.txt</a> を追加してコミットしました。</p>
 <p>このコミットで <a href="#/step11/.git/refs/heads/master">master ブランチ</a>と、<a href="#/step11/.git/refs/heads/step5">step5 ブランチ</a>が枝分かれしています。</p>
 <p>それぞれのブランチを<a href="#/step11/.git/refs/heads">リファレンス</a>からたどってみてください。</p>
