--- a/ja/notes/step6.html
+++ b/ja/notes/step6.html
@@ -2,6 +2,7 @@
 <p><code>$ git checkout step5</code></p>
 <p>step5 ブランチをチェックアウトしました。</p>
 <p><a href="#/step6/.git/"><i class="icon-folder-open"></i> .git</a> をクリックして、どのファイルが変化したかを確認してください。</p>
-<p>checkout で書き換わったファイルは <a href="#/step6/.git/HEAD">HEAD</a> と<a href="#/step6/.git/logs/HEAD">ログ</a>です。</p>
-<p><a href="#/step6/.git/HEAD">HEAD</a> は、今いるブランチを示します。ブランチの先頭を指す<a href="#/step6/.git/refs/heads/step5">リファレンス (refs/heads/step5)</a> のパスが <a href="#/step6/.git/HEAD">HEAD</a> に書いてあります。</p>
+<p>checkout コマンドで書き換わったファイルは <a href="#/step6/.git/HEAD">HEAD</a> と<a href="#/step6/.git/logs/HEAD">ログ</a>です。</p>
+<p><a href="#/step6/.git/HEAD">HEAD</a> は、自分が今いるブランチを示します。コミットをすると、HEAD に書かれたブランチが伸びます。</p>
+<p><a href="#/step6/.git/HEAD">HEAD</a> には、ブランチの先頭を指すリファレンスのパス (<a href="#/step6/.git/refs/heads/step5">refs/heads/step5</a>) が書いてあります。</p>
 <p><a href="#/step6/.git/logs/HEAD">ログ</a>には、ブランチを移動したことが書かれています。</p>
