--- a/ja/notes/step15.html
+++ b/ja/notes/step15.html
@@ -1,5 +1,5 @@
 <h3>Step 15. merge remote</h3>
 <p><code>$ git merge remotes/gist/master -m '...'</code></p>
-<p><a href="#/step14/.git/">step 14</a> で fetch した追跡ブランチを master にマージしました。</p>
+<p><a href="#/step14/.git/">Step 14</a> で fetch した<a href="#/step15/.git/refs/remotes/gist/master">追跡ブランチ</a>をローカルの <a href="#/step15/.git/refs/heads/master">master ブランチ</a>にマージしました。</p>
 <p><a href="#/step15/.git/objects/">作成されたオブジェクトは2つ</a>です。gist.txt が追加された <a href="#/step15/.git/objects/a6/0c186d5f6c4e40af5bbb7c5b55ab822b68eab3">tree オブジェクト</a>と、2つの parent を持つ <a href="#/step15/.git/objects/bf/dc4e868ca40c2b1fbc5fe9333de483719d406f">commit オブジェクト</a>が作成されました。ファイルは変わっていないので blob オブジェクトは作成されません。</p>
-<p>git pull コマンドは、fetch と merge を続けて実行します。Step 14 で見たように、追跡ブランチにリモートの変更を反映し、ローカルブランチにマージします。</p>
+<p>Step 14 と 15 で、fetch、merge をバラバラに実行しましたが、git pull コマンドを使うと fetch と merge を続けて実行できます。pull コマンドは、追跡ブランチにリモートの変更を反映し、今いるブランチにマージします。</p>
