--- a/src/ja/notes/step27.html
+++ b/src/ja/notes/step27.html
@@ -3,5 +3,6 @@
 <p><code>$ git add detached.txt</code></p>
 <p><code>$ git commit -m '...'</code></p>
 <p>detached HEAD にコミットしました。<a href="#/step27/.git/HEAD">HEAD リファレンス</a>が書き換わっています。</p>
-<p><a href="#/step27/.git/refs">リファレンスは何も変化していません</a>。</p>
-<p>このまま別のブランチをチェックアウトすると、HEADが上書きされ、このコミットを参照するリファレンスが存在しなくなるため、いずれゴミ回収処理 (gc) で削除されてしまいます。</p>
+<p><a href="#/step27/.git/refs">refs 以下は変化していません</a>。</p>
+<p>このまま他のブランチをチェックアウトしてしまうと、HEAD が上書きされて、このコミットを参照するリファレンスがなくなります。</p>
+<p>参照されなくなったコミットは、いずれゴミ回収処理 (gc) で削除されます。</p>
