--- a/src/ja-bare/notes/step1.html
+++ b/src/ja-bare/notes/step1.html
@@ -1,6 +1,9 @@
 <h3><span class="label label-important">bare</span> Step 1. init bare</h3>
-<p><a href="">Part 1</a> に引き続き、こんどは複数のリポジトリがどのようにオブジェクトをやり取りするかを見てみます。</p>
-<p>次のステップに進むときは、このコラムの一番下にある <strong>次へ</strong> <i class="icon-hand-right"></i> のリンクを使ってください。リポジトリ間を移動することがあります。画面上部の <i class="icon-chevron-left"></i> <strong>Prev</strong> と <strong>Next</strong> <i class="icon-chevron-right"></i> は、同一リポジトリ内での変化を見たいときに使います。</p>
+<p><a href="../ja/#/step28/.git/">Part 1</a> に引き続き、こんどは複数のリポジトリがどのようにオブジェクトをやり取りするかを見てみます。</p>
+<p>次のステップに進むときは、このコラムの一番下にある <strong>次へ</strong> <i class="icon-hand-right"></i> のリンクを使ってください。リポジトリ間を移動することがあります。</p>
+<p>画面上部のメニューにある <i class="icon-chevron-left"></i> <strong>Prev</strong> と <strong>Next</strong> <i class="icon-chevron-right"></i> は、同じリポジトリ内での変化を見たいときに使います。</p>
+
+<hr>
 
 <p><code>$ git init --bare</code></p>
 <p>--bare をつけてリポジトリを作成しました。これを<strong>ベアリポジトリ</strong>と呼びます。</p>
