--- a/src/ja/notes/step28.html
+++ b/src/ja/notes/step28.html
@@ -2,4 +2,5 @@
 <p><code>$ git checkout -b step28</code></p>
 <p>detached HEAD から新しいブランチを作成し、チェックアウトしました。</p>
 <p><a href="#/step28/.git/refs/heads/">refs/heads にリファレンスが作成され</a>、<a href="#/step28/.git/HEAD">HEAD</a> はこのリファレンスを指すようになりました。</p>
-<p>ブランチをチェックアウトすると detached HEAD は解消します。</p>
+<p>これで detached HEAD 状態は解消されました。</p>
+<p>Part 1 はこれで終わりです。<a href="../ja-bare/#/.git/">Part 2</a> では、複数のリポジトリでオブジェクトをどのようにやり取りするかを見てみます。</p>
