--- a/ja-repo1/index.html
+++ b/ja-repo1/index.html
@@ -70,8 +70,8 @@
                                     <li data-ng-repeat="step in steps"><a data-ng-href="#/{{step.name}}/.git/" data-ng-click="">{{step.label}}</a></li>
                                 </ul>
                             </li>
-                            <li data-ng-show="steps.length > 0" style="display:none"><a data-ng-click="stepPrev()" href=""><i class="icon-chevron-left"></i>Prev</a></li>
-                            <li data-ng-show="steps.length > 0" style="display:none"><a data-ng-click="stepNext()" href="">Next<i class="icon-chevron-right"></i></a></li>
+                            <li data-ng-show="steps.length > 0" style="display:none"><a data-ng-click="stepPrev()" href="">&laquo; Prev</a></li>
+                            <li data-ng-show="steps.length > 0" style="display:none"><a data-ng-click="stepNext()" href="">Next &raquo;</a></li>
 
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents <b class="caret"></b></a>
