--- a/ja/notes/step1.html
+++ b/ja/notes/step1.html
@@ -1,7 +1,7 @@
 <h3>Step 1. init</h3>
 <p><code>$ git init</code></p>
-<p>.git ディレクトリを初期化した直後の状態です。</p>
+<p>.git ディレクトリを初期化した直後の状態です。右側に .git ディレクトリ以下のファイルが一覧で表示されています。</p>
 <p>まだ<a href="#/step1/.git/index">インデックス</a>、<a href="#/step1/.git/refs">リファレンス</a>、<a href="#/step1/.git/objects">オブジェクト</a>は作られていません。</p>
-<p><a href="#/step1/.git/"><i class="icon-folder-open"></i> .git</a> をクリックしてから、画面上部にある <strong>Next</strong> <i class="icon-chevron-right"></i> で次のステップに進んでください。赤く表示されるのが、前のステップから変化したファイル、ディレクトリです。</p>
+<p>画面上部 (黒いヘッダ部分) にある <strong>Next &raquo;</strong></i> で次のステップに進んでください。赤く表示されるのが、前のステップから変化したファイル、ディレクトリです。</p>
 
 
