--- a/ja/notes/step12.html
+++ b/ja/notes/step12.html
@@ -1,7 +1,7 @@
 <h3>Step 12. merge</h3>
 <p><code>$ git merge step5 -m '...'</code></p>
 <p><a href="#/step12/.git/refs/heads/master">master ブランチ</a>に <a href="#/step12/.git/refs/heads/step5">step5 ブランチ</a>をマージしました。</p>
-<p><a href="#/step8/.git/">step 8</a> でみた Fast-forward マージとは異なり、<a href="#/step12/.git/objects/">2個の新しいオブジェクトが作成されています</a>。</p>
+<p>リファレンスだけ書き換わる Fast-forward マージとは異なり、<a href="#/step12/.git/objects/">2個の新しいオブジェクトが作成されています</a>。</p>
 <p>1つは <a href="#/step12/.git/objects/88/005dbf6891d8ea4a17d4fa4dd73f0b813e369a">commit オブジェクト</a>です。マージによって作成されるコミットのことを、<strong>マージコミット</strong>と呼びます。</p>
 <p>このマージコミットには、 parent が2つあることに注目してください。parent によって、枝分かれした2つのコミットを1つにまとめたことがわかります。</p>
 <p>もう1つの追加されたオブジェクトは <a href="#/step12/.git/objects/ab/bb4b938bf57ea8f48c847b37ce119208576cd7">tree オブジェクト</a>です。2つのブランチがマージされ、a.txt から d.txt まで4つのファイルが揃いました。</p>
