--- a/ja/notes/step27.html
+++ b/ja/notes/step27.html
@@ -5,4 +5,4 @@
 <p>detached HEAD にコミットしました。<a href="#/step27/.git/HEAD">HEAD リファレンス</a>が書き換わっています。</p>
 <p><a href="#/step27/.git/refs">refs 以下は変化していません</a>。</p>
 <p>このまま他のブランチをチェックアウトしてしまうと、HEAD が上書きされて、このコミットを参照するリファレンスがなくなります。</p>
-<p>参照されなくなったコミットは、いずれゴミ回収処理 (gc) で削除されます。</p>
+<p>参照されなくなったコミットは、いずれガベージコレクションで削除されます。</p>
