--- a/src/ja-repo2/notes/step14.html
+++ b/src/ja-repo2/notes/step14.html
@@ -2,10 +2,12 @@
 <p><code>$ git pull origin step6-a</code></p>
 
 <p>step6-a ブランチを pull しました。</p>
-<p><a href="../ja-bare/#/step10/.git/objects" target="_blank">bare リポジトリにある全オブジェクトが<a href="#/step14/.git/objects/">コピー済みになりました</a>。</p>
-<p>pull と異なり、fetch は<a href="#/step13/.git/refs">追跡ブランチだけが前進します</a>。</p>
+<p><a href="../ja-bare/#/step10/.git/objects" target="_blank">bare リポジトリにある全オブジェクト</a>が<a href="#/step14/.git/objects/">コピー済みになりました</a>。</p>
+
+<p><a href="#/step14/.git/refs/">リファレンス</a>は <a href="#/step14/.git/refs/remotes/origin/step6-a">追跡ブランチ</a> と <a href="#/step14/.git/refs/heads/master">master ブランチ</a>が更新されました</a>。pull により、step6-a ブランチが master ブランチに Fast-forward マージされています。</p>
+
 <p>
 <a href="#/step12/.git/"><i class="icon-hand-left"></i> 前へ</a>
-<a href="#/step14/.git/">次へ <i class="icon-hand-right"></i></a>
+<a href="#/step15/.git/">次へ <i class="icon-hand-right"></i></a>
 </p>
 
