--- a/src/ja/notes/step10.html
+++ b/src/ja/notes/step10.html
@@ -2,4 +2,4 @@
 <p><code>$ git reset --hard 0b48b13</code></p>
 <p>今度は、reset コマンドに commit オブジェクトの ID (の先頭部分)を指定して、<a href="#/step10/.git/refs/heads/master">master リファレンス</a>が<a href="#/step10/.git/objects/0b/48b1325567ae55dbfaefb250e7460e4fbb7d6d">一番最初のコミット</a>を指すように書き換えました。</p>
 <p>reset コマンドを使うと、リファレンスをコミットツリーのどの位置にでも移動できます。</p>
-<p>リファレンスから参照されなくなった Git オブジェクトは、いずれゴミ回収処理 (gc) で自動的に消去されます。</p>
+<p>リファレンスから参照されなくなった Git オブジェクトは、いずれガベージコレクションで自動的に消去されます。</p>
