--- a/src/ja/notes/step2.html
+++ b/src/ja/notes/step2.html
@@ -4,3 +4,4 @@
 <p>ファイルをaddしました。</p>
 <p><a href="#/step2/.git/objects/30/3ff981c488b812b6215f7db7920dedb3b59d9a">blobオブジェクト</a> が作成され、<a href="#/step2/.git/index">インデックス</a>に追加されています。</p>
 <p>オブジェクトはまだ<a href="#/step2/.git/objects">1つだけ</a>です。<a href="#/step2/.git/refs">リファレンス</a>も存在しません。</p>
+<p>画面上部 (黒いヘッダ部分) にある <strong>Next &raquo;</strong></i> で次のステップに進んでください。</p>
