--- a/src/ja/notes/step3.html
+++ b/src/ja/notes/step3.html
@@ -4,6 +4,6 @@
 <p>最初の <a href="#/step3/.git/objects/0b/48b1325567ae55dbfaefb250e7460e4fbb7d6d">commit オブジェクト</a> と <a href="#/step3/.git/objects/d9/658695cf35f55e4fa1f8021f44c3c8bcfe8702">tree オブジェクト</a> が追加されました。</p>
 <p>また、commitオブジェクトを指す <a href="#/step3/.git/refs/heads/master">リファレンス</a>が作成されています。</p>
 
-<p>リファレンスによって、git は master ブランチの先頭位置がどこかを知ることができます。</p>
+<p>リファレンスによって、Git はブランチの先頭位置がどこかを知ることができます。</p>
 <p><a href="#/step3/.git/logs">ログ</a>に、ブランチの先頭がどこからどこに移動したかが記録されています。</p>
 <p><a href="#/step3/.git/index">インデックス</a>はコミットしても変化しません。</p>
