--- a/src/ja/notes/step5.html
+++ b/src/ja/notes/step5.html
@@ -1,6 +1,6 @@
 <h3>Step 5. branch</h3>
 <p><code>$ git branch step5</code></p>
-<p>ブランチ step5 を作成しました。</p>
+<p>&quot;step5&quot; という名前のブランチを作成しました。</p>
 
 <p>.git 以下で変化したファイルは<a href="#/step5/.git/">2つだけ</a>です。</p>
 <p>step5 ブランチの先頭を指すリファレンス <a href="#/step5/.git/refs/heads/step5">refs/heads/step5</a> が作成されました。<a href="#/step5/.git/refs/heads/step5">step5</a> は <a href="#/step5/.git/refs/heads/master">master</a> と同じ <a href="#/step5/.git/objects/f7/50c1a8d8292dde48842e0d6502801ea79e86a3">コミット</a>を指しています。</p>
