--- a/src/ja/notes/step8.html
+++ b/src/ja/notes/step8.html
@@ -7,4 +7,7 @@
 <p><a href="#/step8/.git/objects">新しいオブジェクトは1つも作成されていません</a>。Fast-forward マージは、ただリファレンスを書き換えるだけです。</p>
 <p><a href="#/step8/.git/logs/HEAD">HEAD のログ</a>に、step5 から master ブランチに移動し、Fast-forward マージを行ったことが記録されています。</p>
 <p>新しく <a href="#/step8/.git/ORIG_HEAD">ORIG_HEAD</a> というファイルが追加されました。マージやリセットなどの操作を行うと、元の HEAD が ORIG_HEAD に記録されます。ブランチを元に戻したいときに、このファイルが役に立ちます。</p>
-<p><a href="#/step8/.git/">index も赤くなり</a>更新されたことになっていますが、これはファイルのタイムスタンプによるものです。このページをバージョン管理する都合上、タイムスタンプを隠しています。</p>
+<p><a href="#/step8/.git/">index も赤で</a>表示されています。これは、作業ディレクトリにあるファイルのタイムスタンプや inode が変化したためです。以下の詳細はあまり重要ではないので、読み飛ばして次のステップに進んでも構いません</p>
+<hr />
+<p>作業ディレクトリでは master ブランチをチェックアウトした時に c.txt が消え、step5 ブランチをマージした時に再度 c.txt が追加されます。この時、 c.txt のタイムスタンプ等が変化するため、index も追随して書き換わります。</p>
+<p><a href="#/step8/.git/index">index</a> に作業ディレクトリのどのような情報が記録されているかは、<a href="#/step8/.git/index">index</a> の一覧でパスの部分をクリックすると確認できます。例えば c.txt は<a href="#/step8/.git/index?sha1=e69de29bb2d1d6434b8b29ae775ad8c2e48c5391">このような情報が</a>記録されています。ただし、このサンプルでは、管理の都合でタイムスタンプや inode にダミーを設定しているため、前のステップから変化した箇所を見ることはできません。</p>
